# rasher

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  mc_log.txt
Games/: Game1.pgn  Game2.pgn  tactics.txt
games/: Game3.pgn  log1.txt  log3.txt
src/: alpha_beta.rs  board.rs  board.rs~  board_tuning.rs  main  main.rs  main.rs~  monte_carlo.rs  monte_carlo.rs~  move_gen.rs  move_gen.rs~  opening_gen.rs  pgn.rs  pgn_parse.rs  tests.rs  tests.rs~  uci.rs  uci.rs~  uci_engine.rs
src/board/: #crazyhouse_move.rs#  .#crazyhouse_move.rs  bitboard.rs  board.rs  crazyhouse_board.rs  crazyhouse_move.rs  game_move.rs  mod.rs  move.rs  sjadam_board.rs  sjadam_move.rs  sjadam_move_gen.rs  std_board.rs  std_move.rs
src/board/chess/: chess_board.rs  mod.rs  move_gen.rs  mv.rs
src/board/crazyhouse/: board.rs  mod.rs  mv.rs
src/board/sjadam/: board.rs  mod.rs  move_gen.rs  mv.rs
src/board/std_move_gen/: mod.rs  move_gen.rs
src/search_algorithms/: #alpha_beta.rs#  alpha_beta.rs  board.rs  game_move.rs  mcts.rs  mod.rs  monte_carlo.rs
src/tests/: #sjadam_move_gen_tests.rs#  bitboard_tests.rs  board_tests.rs  crazyhouse_board_tests.rs  crazyhouse_move_gen_tests.rs  mcts_tests.rs  mod.rs  move_gen_tests.rs  score_tests.rs  sjadam_board_tests.rs  sjadam_move_gen_tests.rs  sjadam_tactics_tests.rs  tactics_tests.rs  tools.rs  uci_tests.rs
