[package]
name = "rasher"
version = "0.1.0"
authors = ["Morten Lohne"]
license = "MIT"

[features]
default = ["logging"]
logging = ["log4rs"]
legacy_sjadam_move_format = []

[dependencies]
itertools = "0.7.*"
rand = "0.3"
ordered-float = "0.5.*"
rayon = "0.9.*"
log = "0.3.*"
lazy_static = "0.2.*"

[dependencies.log4rs]
version = "0.7.*"
optional = true
default-features = false # do not include the default features
features = ["file_appender"]

[dev-dependencies]
quickcheck = "0.4"

[profile.release]
debug = true

