[package]
name = "rasher"
version = "0.1.0"
authors = ["Morten Lohne"]
license = "MIT"

[features]
default = ["logging"]
logging = ["log4rs"]
profile = ["cpuprofiler"]
legacy_sjadam_move_format = []

[dependencies]
rand = "0.3"
ordered-float = "0.5.*"
rayon = "0.9.*"
log = "0.3.*"
lazy_static = "1.0.*"

[dependencies.log4rs]
version = "0.7.*"
optional = true
default-features = false # do not include the default features
features = ["file_appender"]

[dependencies.cpuprofiler]
version = "0.0.3"
optional = true

[dev-dependencies]
quickcheck = "0.5"

[profile.release]
debug = true

