[package]
name = "rasher"
version = "0.1.0"
authors = ["Morten Lohne"]
license = "MIT"

[features]
default = ["logging"]
logging = ["log4rs"]
profile = ["cpuprofiler"]
legacy_sjadam_move_format = []

[dependencies]
rand = "0.6.*"
ordered-float = "1.0.*"
rayon = "1.0.*"
log = "0.4.*"
lazy_static = "1.2.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"

[dependencies.nom]
version = "4.1.*"
features = ["verbose-errors"]

[dependencies.log4rs]
version = "0.8.*"
optional = true
default-features = false # do not include the default features
features = ["file_appender"]

[dependencies.cpuprofiler]
version = "0.0.3"
optional = true

[dev-dependencies]
quickcheck = "0.7"

[profile.release]
debug = true

